fix img relative path

--- a/MusicSchool/_static/src/blog_details.html
+++ b/MusicSchool/_static/src/blog_details.html
@@ -88,11 +88,11 @@
                         <a href="#">
                             <div class="c-card__img-container">
                                 <div class="c-card__label blog__card__label">ギター</div>
-                                <img src="../img/SP/top/blog01.png"
-                                    srcset="../img/SP/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/top/blog01.png"
+                                    srcset="./img/SP/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-detail__main-card__img no-pc">
-                                <img src="../img/PC/top/blog01.png"
-                                    srcset="../img/PC/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/top/blog01.png"
+                                    srcset="./img/PC/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-detail__main-card__img pc">
                             </div>
                             <h1 class="c-card__title blog-detail__main-card__title">アルペジオが劇的に向上する3つの習慣</h1>
@@ -103,28 +103,28 @@
                     <nav class="c-sns-nav blog-detail__sns-nav">
                         <ul class="c-sns-inner">
                             <li><a href="#" class="c-sns-link">
-                                    <img src="../img/icon/sp-blog-facebook.svg" alt="facebook" class="no-pc">
-                                    <img src="../img/icon/pc-blog-facebook.svg" alt="facebook" class="pc">
+                                    <img src="./img/icon/sp-blog-facebook.svg" alt="facebook" class="no-pc">
+                                    <img src="./img/icon/pc-blog-facebook.svg" alt="facebook" class="pc">
                                 </a>
                             </li>
                             <li><a href="#" class="c-sns-link">
-                                    <img src="../img/icon/sp-blog-twitter.svg" alt="twitter" class="no-pc">
-                                    <img src="../img/icon/pc-blog-twitter.svg" alt="twitter" class="pc">
+                                    <img src="./img/icon/sp-blog-twitter.svg" alt="twitter" class="no-pc">
+                                    <img src="./img/icon/pc-blog-twitter.svg" alt="twitter" class="pc">
                                 </a>
                             </li>
                             <li><a href="#" class="c-sns-link">
-                                    <img src="../img/icon/sp-blog-hatena.svg" alt="hatena" class="no-pc">
-                                    <img src="../img/icon/pc-blog-hatena.svg" alt="hatena" class="pc">
+                                    <img src="./img/icon/sp-blog-hatena.svg" alt="hatena" class="no-pc">
+                                    <img src="./img/icon/pc-blog-hatena.svg" alt="hatena" class="pc">
                                 </a>
                             </li>
                             <li><a href="#" class="c-sns-link">
-                                    <img src="../img/icon/sp-blog-line.svg" alt="line" class="no-pc">
-                                    <img src="../img/icon/pc-blog-line.svg" alt="line" class="pc">
+                                    <img src="./img/icon/sp-blog-line.svg" alt="line" class="no-pc">
+                                    <img src="./img/icon/pc-blog-line.svg" alt="line" class="pc">
                                 </a>
                             </li>
                             <li><a href="#" class="c-sns-link">
-                                    <img src="../img/icon/sp-blog-pocket.svg" alt="pocket" class="no-pc">
-                                    <img src="../img/icon/pc-blog-pocket.svg" alt="pocket" class="pc">
+                                    <img src="./img/icon/sp-blog-pocket.svg" alt="pocket" class="no-pc">
+                                    <img src="./img/icon/pc-blog-pocket.svg" alt="pocket" class="pc">
                                 </a>
                             </li>
                         </ul>
@@ -141,10 +141,10 @@
                         <p>
                             本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。
                         </p>
-                        <img src="../img/SP/blog/choice01.png" class="no-pc" alt="声1"
-                            srcset="../img/SP/blog/choice01.png 1x, ../img/SP/blog/choice01@2x.png 2x">
-                        <img src="../img/PC/blog/choice01.png" class="pc" alt="声1"
-                            srcset="../img/PC/blog/choice01.png 1x, ../img/PC/blog/choice01@2x.png 2x">
+                        <img src="./img/SP/blog/choice01.png" class="no-pc" alt="声1"
+                            srcset="./img/SP/blog/choice01.png 1x, ./img/SP/blog/choice01@2x.png 2x">
+                        <img src="./img/PC/blog/choice01.png" class="pc" alt="声1"
+                            srcset="./img/PC/blog/choice01.png 1x, ./img/PC/blog/choice01@2x.png 2x">
                         <ul>
                             <li>リストが入ります</li>
                             <li>リストが入ります</li>
@@ -155,7 +155,7 @@
                     <div class="c-detail__summary blog-detail__summary">
                         <h3>H3見出しが入ります。H3見出しが入ります。</h3>
                         <div class="c-detail__quote">
-                            <img src="../img/icon/quote.svg" alt="quote" class="c-detail__quote__icon">
+                            <img src="./img/icon/quote.svg" alt="quote" class="c-detail__quote__icon">
                             <p class="c-detail__quote__text">
                                 本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。</p>
                         </div>
@@ -170,8 +170,8 @@
                                 <div class="c-linear-nav__item">
                                     <div class="c-linear-nav__item__label c-linear-nav__prev__label">◀︎ 前の記事</div>
                                     <div class="c-linear-nav__card">
-                                        <img class="c-linear-nav__item__img pc" src="../img/PC/blog/blog01.png"
-                                            srcset="../img/PC/blog/blog01.png 1x, ../img/PC/blog/blog01@2x.png 2"></img>
+                                        <img class="c-linear-nav__item__img pc" src="./img/PC/blog/blog01.png"
+                                            srcset="./img/PC/blog/blog01.png 1x, ./img/PC/blog/blog01@2x.png 2"></img>
                                         <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
                                     </div>
                                 </div>
@@ -182,8 +182,8 @@
                                 <div class="c-linear-nav__item">
                                     <div class="c-linear-nav__item__label c-linear-nav__next__label">次の記事 ▶︎</div>
                                     <div class="c-linear-nav__card">
-                                        <img class="c-linear-nav__item__img pc" src="../img/PC/blog/blog01.png"
-                                            srcset="../img/PC/blog/blog01.png 1x, ../img/PC/blog/blog01@2x.png 2"></img>
+                                        <img class="c-linear-nav__item__img pc" src="./img/PC/blog/blog01.png"
+                                            srcset="./img/PC/blog/blog01.png 1x, ./img/PC/blog/blog01@2x.png 2"></img>
                                         <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
                                     </div>
                                 </div>
@@ -202,11 +202,11 @@
                                 <div class="c-card-flex blog-detail__card--flex">
                                     <div class="c-card__img-container">
                                         <div class="c-card__label blog-detail__card__label">ギター</div>
-                                        <img src="../img/SP/top/blog03.png"
-                                            srcset="../img/SP/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x"
+                                        <img src="./img/SP/top/blog03.png"
+                                            srcset="./img/SP/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x"
                                             alt="ブログ画像03" class="c-card__img blog-detail__card__img no-pc">
-                                        <img src="../img/PC/top/blog03.png"
-                                            srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x"
+                                        <img src="./img/PC/top/blog03.png"
+                                            srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x"
                                             alt="ブログ画像03" class="c-card__img blog-detail__card__img pc">
                                     </div>
                                     <div class="c-card__txt-container">
@@ -222,11 +222,11 @@
                                 <div class="c-card-flex blog-detail__card--flex">
                                     <div class="c-card__img-container">
                                         <div class="c-card__label blog-detail__card__label">ギター</div>
-                                        <img src="../img/SP/top/blog03.png"
-                                            srcset="../img/SP/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x"
+                                        <img src="./img/SP/top/blog03.png"
+                                            srcset="./img/SP/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x"
                                             alt="ブログ画像03" class="c-card__img blog-detail__card__img no-pc">
-                                        <img src="../img/PC/top/blog03.png"
-                                            srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x"
+                                        <img src="./img/PC/top/blog03.png"
+                                            srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x"
                                             alt="ブログ画像03" class="c-card__img blog-detail__card__img pc">
                                     </div>
                                     <div class="c-card__txt-container">
@@ -242,11 +242,11 @@
                                 <div class="c-card-flex blog-detail__card--flex">
                                     <div class="c-card__img-container">
                                         <div class="c-card__label blog-detail__card__label">ギター</div>
-                                        <img src="../img/SP/top/blog03.png"
-                                            srcset="../img/SP/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x"
+                                        <img src="./img/SP/top/blog03.png"
+                                            srcset="./img/SP/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x"
                                             alt="ブログ画像03" class="c-card__img blog-detail__card__img no-pc">
-                                        <img src="../img/PC/top/blog03.png"
-                                            srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x"
+                                        <img src="./img/PC/top/blog03.png"
+                                            srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x"
                                             alt="ブログ画像03" class="c-card__img blog-detail__card__img pc">
                                     </div>
                                     <div class="c-card__txt-container">
@@ -278,7 +278,7 @@
                     <form class="blog-detail__search-field">
                         <input type="text" name="blog-detail__search-input" id="blog-detail__search-input"
                             class="blog-detail__search-input">
-                        <input type="image" src="../img/icon/search.svg" alt="search">
+                        <input type="image" src="./img/icon/search.svg" alt="search">
                     </form>
                 </section>
                 <!-- おすすめの記事 -->
@@ -364,16 +364,16 @@
                     </li>
                 </ul>
             </nav>
-            <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
+            <img src="./img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
             <small class="copyright u-font--white">
                 Copyright © 2021 KITAMURA music school Inc. All Rights
             </small>
             <nav class="footer__sns__nav">
                 <ul>
-                    <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
-                    <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
-                    <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
+                    <li><a href="#"><img src="./img/icon/twitter.svg" alt="twitter"></a></li>
+                    <li><a href="#"><img src="./img/icon/facebook.svg" alt="facebook"></a></li>
+                    <li><a href="#"><img src="./img/icon/youtube.svg" alt="youtube"></a></li>
+                    <li><a href="#"><img src="./img/icon/instagram.svg" alt="instagram"></a></li>
                 </ul>
             </nav>
         </div>
