--- a/MusicSchool/_static/src/index.html
+++ b/MusicSchool/_static/src/index.html
@@ -195,13 +195,13 @@
         <h1 class="c-title">ご利用の流れ</h1>
         <div class="introduction__contents">
             <div class="introduction__shape">
-                <img src="../img/icon/down-arrow-red.svg" alt="down-arrow" class="introduction__arrow no-pc">
-                <img src="../img/icon/down-arrow-red-pc.svg" alt="down-arrow" class="introduction__arrow pc">
+                <img src="./img/icon/down-arrow-red.svg" alt="down-arrow" class="introduction__arrow no-pc">
+                <img src="./img/icon/down-arrow-red-pc.svg" alt="down-arrow" class="introduction__arrow pc">
                 <div class="introduction__circle__container">
-                    <img src="../img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
-                    <img src="../img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
-                    <img src="../img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
-                    <img src="../img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
+                    <img src="./img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
+                    <img src="./img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
+                    <img src="./img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
+                    <img src="./img/icon/circle-red-single.svg" alt="circle-red-single" class="introduction__circle">
                 </div>
             </div>
             <table class="introduction__table">
@@ -228,42 +228,42 @@
         <h1 class="c-title">よくあるご質問</h1>
         <div class="faq__contents">
             <div class="accordion__item c-accordion-toggle js-accordion-toggle accordion__flex">
-                <img src="../img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
+                <img src="./img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
                 <p class="accordion__item__text">どのような生徒さんがどれぐらいの期間で稼いでいますか？</p>
             </div>
             <div class="accordion__collapse u-font--red u-font--bold">
                 <div class="accordion__collapse__inner accordion__flex">
-                    <img src="../img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
+                    <img src="./img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
                     <p class="accordion__item__text">個人差はありますが、早ければ３ヶ月ほどで稼げる生徒さんもいらっしゃいます。</p>
                 </div>
             </div>
             <div class="accordion__item c-accordion-toggle js-accordion-toggle accordion__flex">
-                <img src="../img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
+                <img src="./img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
                 <p class="accordion__item__text">途中でプランを変更することは可能ですか？</p>
             </div>
             <div class="accordion__collapse u-font--red u-font--bold ">
                 <div class="accordion__collapse__inner accordion__flex">
-                    <img src="../img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
+                    <img src="./img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
                     <p class="accordion__item__text">途中でプラン変更も可能です。毎月15日までに申請すれば翌月からプランが変更となります。</p>
                 </div>
             </div>
             <div class="accordion__item c-accordion-toggle js-accordion-toggle accordion__flex">
-                <img src="../img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
+                <img src="./img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
                 <p class="accordion__item__text">入学金などの分割払いはできますか？</p>
             </div>
             <div class="accordion__collapse u-font--red u-font--bold">
                 <div class="accordion__collapse__inner accordion__flex">
-                    <img src="../img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
+                    <img src="./img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
                     <p class="accordion__item__text">分割払いも可能です。</p>
                 </div>
             </div>
             <div class="accordion__item c-accordion-toggle js-accordion-toggle accordion__flex">
-                <img src="../img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
+                <img src="./img/icon/question.svg" alt="question-icon" class="accordion__question-icon">
                 <p class="accordion__item__text">休学することも可能ですか？</p>
             </div>
             <div class="accordion__collapse u-font--red u-font--bold">
                 <div class="accordion__collapse__inner accordion__flex">
-                    <img src="../img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
+                    <img src="./img/icon/answer.svg" alt="answer-icon" class="accordion__answer-icon">
                     <p class="accordion__item__text">休学も可能です。</p>
                 </div>
             </div>
@@ -299,11 +299,11 @@
                     <a href="#">
                         <div class="c-card__img-container">
                             <div class="c-card__label blog__card__label">SNS</div>
-                            <img src="../img/SP/top/blog01.png"
-                                srcset="../img/SP/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                            <img src="./img/SP/top/blog01.png"
+                                srcset="./img/SP/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                 class="c-card__img blog__card__img no-pc">
-                            <img src="../img/PC/top/blog01.png"
-                                srcset="../img/PC/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                            <img src="./img/PC/top/blog01.png"
+                                srcset="./img/PC/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                 class="c-card__img blog__card__img pc">
                         </div>
                         <h2 class="c-card__title blog__card__title">フォロワーではなくファンを増やせとは？</h2>
@@ -314,11 +314,11 @@
                     <a href="#">
                         <div class="c-card__img-container">
                             <div class="c-card__label blog__card__label">集客方法</div>
-                            <img src="../img/SP/top/blog02.png"
-                                srcset="../img/SP/top/blog02.png 1x, ../img/SP/top/blog02@2x.png 2x" alt="ブログ画像02"
+                            <img src="./img/SP/top/blog02.png"
+                                srcset="./img/SP/top/blog02.png 1x, ./img/SP/top/blog02@2x.png 2x" alt="ブログ画像02"
                                 class="c-card__img blog__card__img no-pc">
-                            <img src="../img/PC/top/blog02.png"
-                                srcset="../img/PC/top/blog02.png 1x, ../img/PC/top/blog02@2x.png 2x" alt="ブログ画像02"
+                            <img src="./img/PC/top/blog02.png"
+                                srcset="./img/PC/top/blog02.png 1x, ./img/PC/top/blog02@2x.png 2x" alt="ブログ画像02"
                                 class="c-card__img blog__card__img pc">
                         </div>
                         <h2 class="c-card__title blog__card__title">集客してる間は売れないという法則</h2>
@@ -329,11 +329,11 @@
                     <a href="#">
                         <div class="c-card__img-container">
                             <div class="c-card__label blog__card__label">ギター</div>
-                            <img src="../img/SP/top/blog03.png"
-                                srcset="../img/SP/top/blog03.png 1x, ../img/SP/top/blog03@2x.png 2x" alt="ブログ画像03"
+                            <img src="./img/SP/top/blog03.png"
+                                srcset="./img/SP/top/blog03.png 1x, ./img/SP/top/blog03@2x.png 2x" alt="ブログ画像03"
                                 class="c-card__img blog__card__img no-pc">
-                            <img src="../img/PC/top/blog03.png"
-                                srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像03"
+                            <img src="./img/PC/top/blog03.png"
+                                srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x" alt="ブログ画像03"
                                 class="c-card__img blog__card__img pc">
                         </div>
                         <h2 class="c-card__title blog__card__title">アルペジオが劇的に向上する3つの習慣</h2>
@@ -369,16 +369,16 @@
                     <li><a href="./result_list.html" class="u-font--white u-font--bold footer__nav__item">卒業実績</a></li>
                 </ul>
             </nav>
-            <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
+            <img src="./img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
             <small class="copyright u-font--white">
                 Copyright © 2021 KITAMURA music school Inc. All Rights
             </small>
             <nav class="footer__sns__nav">
                 <ul>
-                    <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
-                    <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
-                    <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
+                    <li><a href="#"><img src="./img/icon/twitter.svg" alt="twitter"></a></li>
+                    <li><a href="#"><img src="./img/icon/facebook.svg" alt="facebook"></a></li>
+                    <li><a href="#"><img src="./img/icon/youtube.svg" alt="youtube"></a></li>
+                    <li><a href="#"><img src="./img/icon/instagram.svg" alt="instagram"></a></li>
                 </ul>
             </nav>
         </div>
