--- a/MusicSchool/_static/src/notice_details.html
+++ b/MusicSchool/_static/src/notice_details.html
@@ -96,10 +96,10 @@
                         <p>
                             本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。
                         </p>
-                        <img src="../img/SP/blog/choice01.png" class="no-pc" alt="声1"
-                            srcset="../img/SP/blog/choice01.png 1x, ../img/SP/blog/choice01@2x.png 2x">
-                        <img src="../img/PC/blog/choice01.png" class="pc" alt="声1"
-                            srcset="../img/PC/blog/choice01.png 1x, ../img/PC/blog/choice01@2x.png 2x">
+                        <img src="./img/SP/blog/choice01.png" class="no-pc" alt="声1"
+                            srcset="./img/SP/blog/choice01.png 1x, ./img/SP/blog/choice01@2x.png 2x">
+                        <img src="./img/PC/blog/choice01.png" class="pc" alt="声1"
+                            srcset="./img/PC/blog/choice01.png 1x, ./img/PC/blog/choice01@2x.png 2x">
                         <ul>
                             <li>リストが入ります</li>
                             <li>リストが入ります</li>
@@ -110,7 +110,7 @@
                     <div class="c-detail__summary notice-detail__summary">
                         <h3>H3見出しが入ります。H3見出しが入ります。</h3>
                         <div class="c-detail__quote">
-                            <img src="../img/icon/quote.svg" alt="quote" class="c-detail__quote__icon">
+                            <img src="./img/icon/quote.svg" alt="quote" class="c-detail__quote__icon">
                             <p class="c-detail__quote__text">
                                 本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。</p>
                         </div>
@@ -172,16 +172,16 @@
                     </li>
                 </ul>
             </nav>
-            <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
+            <img src="./img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
             <small class="copyright u-font--white">
                 Copyright © 2021 KITAMURA music school Inc. All Rights
             </small>
             <nav class="footer__sns__nav">
                 <ul>
-                    <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
-                    <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
-                    <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
+                    <li><a href="#"><img src="./img/icon/twitter.svg" alt="twitter"></a></li>
+                    <li><a href="#"><img src="./img/icon/facebook.svg" alt="facebook"></a></li>
+                    <li><a href="#"><img src="./img/icon/youtube.svg" alt="youtube"></a></li>
+                    <li><a href="#"><img src="./img/icon/instagram.svg" alt="instagram"></a></li>
                 </ul>
             </nav>
         </div>
