--- a/MusicSchool/_static/src/result_details.html
+++ b/MusicSchool/_static/src/result_details.html
@@ -88,12 +88,12 @@
                         <a href="#">
                             <div class="c-card__img-container">
                                 <div class="c-card__label result-details__main-card__label">ポップス</div>
-                                <img src="../img/SP/top/voice01.png"
-                                    srcset="../img/SP/top/voice01.png 1x, ../img/PC/top/voice01@2x.png 2x"
-                                    alt="卒業実績画像01" class="c-card__img result-details__main-card__img no-pc">
-                                <img src="../img/PC/top/voice01.png"
-                                    srcset="../img/PC/top/voice01.png 1x, ../img/PC/top/voice01@2x.png 2x"
-                                    alt="卒業実績画像01" class="c-card__img result-details__main-card__img pc">
+                                <img src="./img/SP/top/voice01.png"
+                                    srcset="./img/SP/top/voice01.png 1x, ./img/PC/top/voice01@2x.png 2x" alt="卒業実績画像01"
+                                    class="c-card__img result-details__main-card__img no-pc">
+                                <img src="./img/PC/top/voice01.png"
+                                    srcset="./img/PC/top/voice01.png 1x, ./img/PC/top/voice01@2x.png 2x" alt="卒業実績画像01"
+                                    class="c-card__img result-details__main-card__img pc">
                             </div>
                             <h1 class="c-card__title result_details__main-card__title">タイトルが入ります。タイトルが入ります。タイトルが入ります。
                             </h1>
@@ -143,8 +143,8 @@
                                     <div class="c-linear-nav__item__label c-linear-nav__prev__label">◀︎ 前の記事
                                     </div>
                                     <div class="c-linear-nav__card result-details__linear-nav__card">
-                                        <img class="c-linear-nav__item__img pc" src="../img/PC/top/blog03.png"
-                                            srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2"></img>
+                                        <img class="c-linear-nav__item__img pc" src="./img/PC/top/blog03.png"
+                                            srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2"></img>
                                         <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
                                     </div>
                                 </div>
@@ -156,8 +156,8 @@
                                     <div class="c-linear-nav__item__label c-linear-nav__next__label">次の記事 ▶︎
                                     </div>
                                     <div class="c-linear-nav__card result-details__linear-nav__card">
-                                        <img class="c-linear-nav__item__img pc" src="../img/PC/top/blog03.png"
-                                            srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2"></img>
+                                        <img class="c-linear-nav__item__img pc" src="./img/PC/top/blog03.png"
+                                            srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2"></img>
                                         <div class="c-linear-nav__item__title">タイトルが入ります。タイトルが入ります。タイトルが入</div>
                                     </div>
                                 </div>
@@ -176,11 +176,11 @@
                                 <div class="c-card-flex result_details__card--flex">
                                     <div class="c-card__img-container">
                                         <div class="c-card__label result_details__card__label">ロック</div>
-                                        <img src="../img/SP/top/voice02.png"
-                                            srcset="../img/SP/top/voice02.png 1x, ../img/PC/top/voice02@2x.png 2x"
+                                        <img src="./img/SP/top/voice02.png"
+                                            srcset="./img/SP/top/voice02.png 1x, ./img/PC/top/voice02@2x.png 2x"
                                             alt="卒業実績02" class="c-card__img result_details__card__img no-pc">
-                                        <img src="../img/PC/top/voice02.png"
-                                            srcset="../img/PC/top/voice02.png 1x, ../img/PC/top/voice02@2x.png 2x"
+                                        <img src="./img/PC/top/voice02.png"
+                                            srcset="./img/PC/top/voice02.png 1x, ./img/PC/top/voice02@2x.png 2x"
                                             alt="卒業実績02" class="c-card__img result_details__card__img pc">
                                     </div>
                                     <div class="c-card__txt-container">
@@ -196,11 +196,11 @@
                                 <div class="c-card-flex result_details__card--flex">
                                     <div class="c-card__img-container">
                                         <div class="c-card__label result_details__card__label">ジャズ</div>
-                                        <img src="../img/SP/top/voice03.png"
-                                            srcset="../img/SP/top/voice03.png 1x, ../img/PC/top/voice03@2x.png 2x"
+                                        <img src="./img/SP/top/voice03.png"
+                                            srcset="./img/SP/top/voice03.png 1x, ./img/PC/top/voice03@2x.png 2x"
                                             alt="卒業実績03" class="c-card__img result_details__card__img no-pc">
-                                        <img src="../img/PC/top/voice03.png"
-                                            srcset="../img/PC/top/voice03.png 1x, ../img/PC/top/voice03@2x.png 2x"
+                                        <img src="./img/PC/top/voice03.png"
+                                            srcset="./img/PC/top/voice03.png 1x, ./img/PC/top/voice03@2x.png 2x"
                                             alt="卒業実績03" class="c-card__img result_details__card__img pc">
                                     </div>
                                     <div class="c-card__txt-container">
@@ -216,11 +216,11 @@
                                 <div class="c-card-flex result_details__card--flex">
                                     <div class="c-card__img-container">
                                         <div class="c-card__label result_details__card__label">ラテン</div>
-                                        <img src="../img/SP/top/voice04.png"
-                                            srcset="../img/SP/top/voice04.png 1x, ../img/PC/top/voice04@2x.png 2x"
+                                        <img src="./img/SP/top/voice04.png"
+                                            srcset="./img/SP/top/voice04.png 1x, ./img/PC/top/voice04@2x.png 2x"
                                             alt="卒業実績04" class="c-card__img result_details__card__img no-pc">
-                                        <img src="../img/PC/top/voice04.png"
-                                            srcset="../img/PC/top/voice04.png 1x, ../img/PC/top/voice04@2x.png 2x"
+                                        <img src="./img/PC/top/voice04.png"
+                                            srcset="./img/PC/top/voice04.png 1x, ./img/PC/top/voice04@2x.png 2x"
                                             alt="卒業実績04" class="c-card__img result_details__card__img pc">
                                     </div>
                                     <div class="c-card__txt-container">
@@ -263,16 +263,16 @@
                     </li>
                 </ul>
             </nav>
-            <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
+            <img src="./img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
             <small class="copyright u-font--white">
                 Copyright © 2021 KITAMURA music school Inc. All Rights
             </small>
             <nav class="footer__sns__nav">
                 <ul>
-                    <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
-                    <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
-                    <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
+                    <li><a href="#"><img src="./img/icon/twitter.svg" alt="twitter"></a></li>
+                    <li><a href="#"><img src="./img/icon/facebook.svg" alt="facebook"></a></li>
+                    <li><a href="#"><img src="./img/icon/youtube.svg" alt="youtube"></a></li>
+                    <li><a href="#"><img src="./img/icon/instagram.svg" alt="instagram"></a></li>
                 </ul>
             </nav>
         </div>
