--- a/MusicSchool/_static/src/result_list.html
+++ b/MusicSchool/_static/src/result_list.html
@@ -87,11 +87,11 @@
                 <a href="./result_details.html">
                     <div class="c-card__img-container">
                         <div class="c-card__label result-list__card__label">ポップス</div>
-                        <img src="../img/SP/top/voice01.png"
-                            srcset="../img/SP/top/voice01.png 1x, ../img/PC/top/voice01@2x.png 2x" alt="卒業実績画像01"
+                        <img src="./img/SP/top/voice01.png"
+                            srcset="./img/SP/top/voice01.png 1x, ./img/PC/top/voice01@2x.png 2x" alt="卒業実績画像01"
                             class="c-card__img result-list__card__img no-pc">
-                        <img src="../img/PC/top/voice01.png"
-                            srcset="../img/PC/top/voice01.png 1x, ../img/PC/top/voice01@2x.png 2x" alt="卒業実績画像01"
+                        <img src="./img/PC/top/voice01.png"
+                            srcset="./img/PC/top/voice01.png 1x, ./img/PC/top/voice01@2x.png 2x" alt="卒業実績画像01"
                             class="c-card__img result-list__card__img pc">
                     </div>
                     <h2 class="c-card__title result-list__card__title">タイトルが入ります。タイトルが入ります。タイトルが入ります。</h2>
@@ -102,11 +102,11 @@
                 <a href="./result_details.html">
                     <div class="c-card__img-container">
                         <div class="c-card__label result-list__card__label">ロック</div>
-                        <img src="../img/SP/top/voice02.png"
-                            srcset="../img/SP/top/voice02.png 1x, ../img/PC/top/voice02@2x.png 2x" alt="卒業実績画像02"
+                        <img src="./img/SP/top/voice02.png"
+                            srcset="./img/SP/top/voice02.png 1x, ./img/PC/top/voice02@2x.png 2x" alt="卒業実績画像02"
                             class="c-card__img result-list__card__img no-pc">
-                        <img src="../img/PC/top/voice02.png"
-                            srcset="../img/PC/top/voice02.png 1x, ../img/PC/top/voice02@2x.png 2x" alt="卒業実績画像02"
+                        <img src="./img/PC/top/voice02.png"
+                            srcset="./img/PC/top/voice02.png 1x, ./img/PC/top/voice02@2x.png 2x" alt="卒業実績画像02"
                             class="c-card__img result-list__card__img pc">
                     </div>
                     <h2 class="c-card__title result-list__card__title">タイトルが入ります。タイトルが入ります。タイトルが入ります。</h2>
@@ -117,11 +117,11 @@
                 <a href="./result_details.html">
                     <div class="c-card__img-container">
                         <div class="c-card__label result-list__card__label">ジャズ</div>
-                        <img src="../img/SP/top/voice03.png"
-                            srcset="../img/SP/top/voice03.png 1x, ../img/PC/top/voice03@2x.png 2x" alt="卒業実績画像03"
+                        <img src="./img/SP/top/voice03.png"
+                            srcset="./img/SP/top/voice03.png 1x, ./img/PC/top/voice03@2x.png 2x" alt="卒業実績画像03"
                             class="c-card__img result-list__card__img no-pc">
-                        <img src="../img/PC/top/voice03.png"
-                            srcset="../img/PC/top/voice03.png 1x, ../img/PC/top/voice03@2x.png 2x" alt="卒業実績画像03"
+                        <img src="./img/PC/top/voice03.png"
+                            srcset="./img/PC/top/voice03.png 1x, ./img/PC/top/voice03@2x.png 2x" alt="卒業実績画像03"
                             class="c-card__img result-list__card__img pc">
                     </div>
                     <h2 class="c-card__title result-list__card__title">タイトルが入ります。タイトルが入ります。タイトルが入ります。</h2>
@@ -132,11 +132,11 @@
                 <a href="./result_details.html">
                     <div class="c-card__img-container">
                         <div class="c-card__label result-list__card__label">ラテン</div>
-                        <img src="../img/SP/top/voice04.png"
-                            srcset="../img/SP/top/voice04.png 1x, ../img/PC/top/voice04@2x.png 2x" alt="卒業実績画像04"
+                        <img src="./img/SP/top/voice04.png"
+                            srcset="./img/SP/top/voice04.png 1x, ./img/PC/top/voice04@2x.png 2x" alt="卒業実績画像04"
                             class="c-card__img result-list__card__img no-pc">
-                        <img src="../img/PC/top/voice04.png"
-                            srcset="../img/PC/top/voice04.png 1x, ../img/PC/top/voice04@2x.png 2x" alt="卒業実績画像04"
+                        <img src="./img/PC/top/voice04.png"
+                            srcset="./img/PC/top/voice04.png 1x, ./img/PC/top/voice04@2x.png 2x" alt="卒業実績画像04"
                             class="c-card__img result-list__card__img pc">
                     </div>
                     <h2 class="c-card__title result-list__card__title">タイトルが入ります。タイトルが入ります。タイトルが入ります。</h2>
@@ -147,11 +147,11 @@
                 <a href="./result_details.html">
                     <div class="c-card__img-container">
                         <div class="c-card__label result-list__card__label">クラシック</div>
-                        <img src="../img/SP/top/voice05.png"
-                            srcset="../img/SP/top/voice05.png 1x, ../img/PC/top/voice05@2x.png 2x" alt="卒業実績画像05"
+                        <img src="./img/SP/top/voice05.png"
+                            srcset="./img/SP/top/voice05.png 1x, ./img/PC/top/voice05@2x.png 2x" alt="卒業実績画像05"
                             class="c-card__img result-list__card__img no-pc result-list__card__img__adjust">
-                        <img src="../img/PC/top/voice05.png"
-                            srcset="../img/PC/top/voice05.png 1x, ../img/PC/top/voice05@2x.png 2x" alt="卒業実績画像05"
+                        <img src="./img/PC/top/voice05.png"
+                            srcset="./img/PC/top/voice05.png 1x, ./img/PC/top/voice05@2x.png 2x" alt="卒業実績画像05"
                             class="c-card__img result-list__card__img pc">
                     </div>
                     <h2 class="c-card__title result-list__card__title">タイトルが入ります。タイトルが入ります。タイトルが入ります。</h2>
@@ -162,11 +162,11 @@
                 <a href="./result_details.html">
                     <div class="c-card__img-container">
                         <div class="c-card__label result-list__card__label">ポップス</div>
-                        <img src="../img/SP/top/voice06.png"
-                            srcset="../img/SP/top/voice06.png 1x, ../img/PC/top/voice06@2x.png 2x" alt="卒業実績画像06"
+                        <img src="./img/SP/top/voice06.png"
+                            srcset="./img/SP/top/voice06.png 1x, ./img/PC/top/voice06@2x.png 2x" alt="卒業実績画像06"
                             class="c-card__img result-list__card__img no-pc">
-                        <img src="../img/PC/top/voice06.png"
-                            srcset="../img/PC/top/voice06.png 1x, ../img/PC/top/voice06@2x.png 2x" alt="卒業実績画像06"
+                        <img src="./img/PC/top/voice06.png"
+                            srcset="./img/PC/top/voice06.png 1x, ./img/PC/top/voice06@2x.png 2x" alt="卒業実績画像06"
                             class="c-card__img result-list__card__img pc">
                     </div>
                     <h2 class="c-card__title result-list__card__title">タイトルが入ります。タイトルが入ります。タイトルが入ります。</h2>
@@ -177,11 +177,11 @@
                 <a href="./result_details.html">
                     <div class="c-card__img-container">
                         <div class="c-card__label result-list__card__label">ロック</div>
-                        <img src="../img/SP/top/voice07.png"
-                            srcset="../img/SP/top/voice07.png 1x, ../img/PC/top/voice07@2x.png 2x" alt="卒業実績画像07"
+                        <img src="./img/SP/top/voice07.png"
+                            srcset="./img/SP/top/voice07.png 1x, ./img/PC/top/voice07@2x.png 2x" alt="卒業実績画像07"
                             class="c-card__img result-list__card__img no-pc">
-                        <img src="../img/PC/top/voice07.png"
-                            srcset="../img/PC/top/voice07.png 1x, ../img/PC/top/voice07@2x.png 2x" alt="卒業実績画像07"
+                        <img src="./img/PC/top/voice07.png"
+                            srcset="./img/PC/top/voice07.png 1x, ./img/PC/top/voice07@2x.png 2x" alt="卒業実績画像07"
                             class="c-card__img result-list__card__img pc">
                     </div>
                     <h2 class="c-card__title result-list__card__title">タイトルが入ります。タイトルが入ります。タイトルが入ります。</h2>
@@ -192,11 +192,11 @@
                 <a href="./result_details.html">
                     <div class="c-card__img-container">
                         <div class="c-card__label result-list__card__label">ジャズ</div>
-                        <img src="../img/SP/top/voice08.png"
-                            srcset="../img/SP/top/voice08.png 1x, ../img/PC/top/voice08@2x.png 2x" alt="卒業実績画像08"
+                        <img src="./img/SP/top/voice08.png"
+                            srcset="./img/SP/top/voice08.png 1x, ./img/PC/top/voice08@2x.png 2x" alt="卒業実績画像08"
                             class="c-card__img result-list__card__img no-pc">
-                        <img src="../img/PC/top/voice08.png"
-                            srcset="../img/PC/top/voice08.png 1x, ../img/PC/top/voice08@2x.png 2x" alt="卒業実績画像08"
+                        <img src="./img/PC/top/voice08.png"
+                            srcset="./img/PC/top/voice08.png 1x, ./img/PC/top/voice08@2x.png 2x" alt="卒業実績画像08"
                             class="c-card__img result-list__card__img pc">
                     </div>
                     <h2 class="c-card__title result-list__card__title">タイトルが入ります。タイトルが入ります。タイトルが入ります。</h2>
@@ -207,11 +207,11 @@
                 <a href="./result_details.html">
                     <div class="c-card__img-container">
                         <div class="c-card__label result-list__card__label">ラテン</div>
-                        <img src="../img/SP/top/voice09.png"
-                            srcset="../img/SP/top/voice09.png 1x, ../img/PC/top/voice09@2x.png 2x" alt="卒業実績画像09"
+                        <img src="./img/SP/top/voice09.png"
+                            srcset="./img/SP/top/voice09.png 1x, ./img/PC/top/voice09@2x.png 2x" alt="卒業実績画像09"
                             class="c-card__img result-list__card__img no-pc">
-                        <img src="../img/PC/top/voice09.png"
-                            srcset="../img/PC/top/voice09.png 1x, ../img/PC/top/voice09@2x.png 2x" alt="卒業実績画像09"
+                        <img src="./img/PC/top/voice09.png"
+                            srcset="./img/PC/top/voice09.png 1x, ./img/PC/top/voice09@2x.png 2x" alt="卒業実績画像09"
                             class="c-card__img result-list__card__img pc">
                     </div>
                     <h2 class="c-card__title result-list__card__title">タイトルが入ります。タイトルが入ります。タイトルが入ります。</h2>
@@ -222,11 +222,11 @@
                 <a href="./result_details.html">
                     <div class="c-card__img-container">
                         <div class="c-card__label result-list__card__label">クラシック</div>
-                        <img src="../img/SP/top/voice10.png"
-                            srcset="../img/SP/top/voice10.png 1x, ../img/PC/top/voice10@2x.png 2x" alt="卒業実績画像10"
+                        <img src="./img/SP/top/voice10.png"
+                            srcset="./img/SP/top/voice10.png 1x, ./img/PC/top/voice10@2x.png 2x" alt="卒業実績画像10"
                             class="c-card__img result-list__card__img no-pc">
-                        <img src="../img/PC/top/voice10.png"
-                            srcset="../img/PC/top/voice10.png 1x, ../img/PC/top/voice10@2x.png 2x" alt="卒業実績画像10"
+                        <img src="./img/PC/top/voice10.png"
+                            srcset="./img/PC/top/voice10.png 1x, ./img/PC/top/voice10@2x.png 2x" alt="卒業実績画像10"
                             class="c-card__img result-list__card__img pc">
                     </div>
                     <h2 class="c-card__title result-list__card__title">タイトルが入ります。タイトルが入ります。タイトルが入ります。</h2>
@@ -272,16 +272,16 @@
                     </li>
                 </ul>
             </nav>
-            <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
+            <img src="./img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
             <small class="copyright u-font--white">
                 Copyright © 2021 KITAMURA music school Inc. All Rights
             </small>
             <nav class="footer__sns__nav">
                 <ul>
-                    <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
-                    <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
-                    <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
+                    <li><a href="#"><img src="./img/icon/twitter.svg" alt="twitter"></a></li>
+                    <li><a href="#"><img src="./img/icon/facebook.svg" alt="facebook"></a></li>
+                    <li><a href="#"><img src="./img/icon/youtube.svg" alt="youtube"></a></li>
+                    <li><a href="#"><img src="./img/icon/instagram.svg" alt="instagram"></a></li>
                 </ul>
             </nav>
         </div>
