--- a/MusicSchool/_static/src/search.html
+++ b/MusicSchool/_static/src/search.html
@@ -86,11 +86,11 @@
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label search-list__card__label">ギター</div>
-                                <img src="../img/SP/top/blog01.png"
-                                    srcset="../img/SP/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/top/blog01.png"
+                                    srcset="./img/SP/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img no-pc">
-                                <img src="../img/PC/top/blog01.png"
-                                    srcset="../img/PC/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/top/blog01.png"
+                                    srcset="./img/PC/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img pc">
                             </div>
                         </div>
@@ -110,11 +110,11 @@
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label search-list__card__label">集客方法</div>
-                                <img src="../img/SP/top/blog02.png"
-                                    srcset="../img/SP/top/blog02.png 1x, ../img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/top/blog02.png"
+                                    srcset="./img/SP/top/blog02.png 1x, ./img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img no-pc">
-                                <img src="../img/PC/top/blog02.png"
-                                    srcset="../img/PC/top/blog02.png 1x, ../img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/top/blog02.png"
+                                    srcset="./img/PC/top/blog02.png 1x, ./img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img pc">
                             </div>
                         </div>
@@ -134,11 +134,11 @@
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label search-list__card__label">SNS</div>
-                                <img src="../img/SP/top/blog03.png"
-                                    srcset="../img/SP/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/top/blog03.png"
+                                    srcset="./img/SP/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img no-pc">
-                                <img src="../img/PC/top/blog03.png"
-                                    srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/top/blog03.png"
+                                    srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img pc">
                             </div>
                         </div>
@@ -158,11 +158,11 @@
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label search-list__card__label">ギター</div>
-                                <img src="../img/SP/top/blog01.png"
-                                    srcset="../img/SP/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/top/blog01.png"
+                                    srcset="./img/SP/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img no-pc">
-                                <img src="../img/PC/top/blog01.png"
-                                    srcset="../img/PC/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/top/blog01.png"
+                                    srcset="./img/PC/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img pc">
                             </div>
                         </div>
@@ -182,11 +182,11 @@
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label search-list__card__label">集客方法</div>
-                                <img src="../img/SP/top/blog02.png"
-                                    srcset="../img/SP/top/blog02.png 1x, ../img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/top/blog02.png"
+                                    srcset="./img/SP/top/blog02.png 1x, ./img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img no-pc">
-                                <img src="../img/PC/top/blog02.png"
-                                    srcset="../img/PC/top/blog02.png 1x, ../img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/top/blog02.png"
+                                    srcset="./img/PC/top/blog02.png 1x, ./img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img pc">
                             </div>
                         </div>
@@ -206,11 +206,11 @@
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label search-list__card__label">SNS</div>
-                                <img src="../img/SP/top/blog03.png"
-                                    srcset="../img/SP/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/top/blog03.png"
+                                    srcset="./img/SP/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img no-pc">
-                                <img src="../img/PC/top/blog03.png"
-                                    srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/top/blog03.png"
+                                    srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img pc">
                             </div>
                         </div>
@@ -230,11 +230,11 @@
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label search-list__card__label">ギター</div>
-                                <img src="../img/SP/top/blog01.png"
-                                    srcset="../img/SP/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/top/blog01.png"
+                                    srcset="./img/SP/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img no-pc">
-                                <img src="../img/PC/top/blog01.png"
-                                    srcset="../img/PC/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/top/blog01.png"
+                                    srcset="./img/PC/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img pc">
                             </div>
                         </div>
@@ -254,11 +254,11 @@
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label search-list__card__label">集客方法</div>
-                                <img src="../img/SP/top/blog02.png"
-                                    srcset="../img/SP/top/blog02.png 1x, ../img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/top/blog02.png"
+                                    srcset="./img/SP/top/blog02.png 1x, ./img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img no-pc">
-                                <img src="../img/PC/top/blog02.png"
-                                    srcset="../img/PC/top/blog02.png 1x, ../img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/top/blog02.png"
+                                    srcset="./img/PC/top/blog02.png 1x, ./img/PC/top/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img pc">
                             </div>
                         </div>
@@ -278,11 +278,11 @@
                         <div class="search-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label search-list__card__label">SNS</div>
-                                <img src="../img/SP/top/blog03.png"
-                                    srcset="../img/SP/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/top/blog03.png"
+                                    srcset="./img/SP/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img no-pc">
-                                <img src="../img/PC/top/blog03.png"
-                                    srcset="../img/PC/top/blog03.png 1x, ../img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/top/blog03.png"
+                                    srcset="./img/PC/top/blog03.png 1x, ./img/PC/top/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img search-list__card__img pc">
                             </div>
                         </div>
@@ -303,11 +303,11 @@
                     <div class="search-list__item--left">
                         <div class="c-card__img-container">
                             <div class="c-card__label search-list__card__label">ギター</div>
-                            <img src="../img/SP/top/blog01.png"
-                                srcset="../img/SP/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                            <img src="./img/SP/top/blog01.png"
+                                srcset="./img/SP/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                 class="c-card__img search-list__card__img no-pc">
-                            <img src="../img/PC/top/blog01.png"
-                                srcset="../img/PC/top/blog01.png 1x, ../img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
+                            <img src="./img/PC/top/blog01.png"
+                                srcset="./img/PC/top/blog01.png 1x, ./img/PC/top/blog01@2x.png 2x" alt="ブログ画像01"
                                 class="c-card__img search-list__card__img pc">
                         </div>
                     </div>
@@ -357,16 +357,16 @@
                     </li>
                 </ul>
             </nav>
-            <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
+            <img src="./img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
             <small class="copyright u-font--white">
                 Copyright © 2021 KITAMURA music school Inc. All Rights
             </small>
             <nav class="footer__sns__nav">
                 <ul>
-                    <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
-                    <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
-                    <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
+                    <li><a href="#"><img src="./img/icon/twitter.svg" alt="twitter"></a></li>
+                    <li><a href="#"><img src="./img/icon/facebook.svg" alt="facebook"></a></li>
+                    <li><a href="#"><img src="./img/icon/youtube.svg" alt="youtube"></a></li>
+                    <li><a href="#"><img src="./img/icon/instagram.svg" alt="instagram"></a></li>
                 </ul>
             </nav>
         </div>
