--- a/MusicSchool/_static/src/blog_list.html
+++ b/MusicSchool/_static/src/blog_list.html
@@ -89,11 +89,11 @@
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label blog-list__card__label">ギター</div>
-                                <img src="../img/SP/blog/blog01.png"
-                                    srcset="../img/SP/blog/blog01.png 1x, ../img/SP/blog/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/blog/blog01.png"
+                                    srcset="./img/SP/blog/blog01.png 1x, ./img/SP/blog/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img no-pc">
-                                <img src="../img/PC/blog/blog01.png"
-                                    srcset="../img/PC/blog/blog01.png 1x, ../img/PC/blog/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/blog/blog01.png"
+                                    srcset="./img/PC/blog/blog01.png 1x, ./img/PC/blog/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img pc">
                             </div>
                         </div>
@@ -113,11 +113,11 @@
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label blog-list__card__label">集客方法</div>
-                                <img src="../img/SP/blog/blog02.png"
-                                    srcset="../img/SP/blog/blog02.png 1x, ../img/SP/blog/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/blog/blog02.png"
+                                    srcset="./img/SP/blog/blog02.png 1x, ./img/SP/blog/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img no-pc">
-                                <img src="../img/PC/blog/blog02.png"
-                                    srcset="../img/PC/blog/blog02.png 1x, ../img/PC/blog/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/blog/blog02.png"
+                                    srcset="./img/PC/blog/blog02.png 1x, ./img/PC/blog/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img pc">
                             </div>
                         </div>
@@ -137,11 +137,11 @@
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label blog-list__card__label">SNS</div>
-                                <img src="../img/SP/blog/blog03.png"
-                                    srcset="../img/SP/blog/blog03.png 1x, ../img/SP/blog/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/blog/blog03.png"
+                                    srcset="./img/SP/blog/blog03.png 1x, ./img/SP/blog/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img no-pc">
-                                <img src="../img/PC/blog/blog03.png"
-                                    srcset="../img/PC/blog/blog03.png 1x, ../img/PC/blog/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/blog/blog03.png"
+                                    srcset="./img/PC/blog/blog03.png 1x, ./img/PC/blog/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img pc">
                             </div>
                         </div>
@@ -161,11 +161,11 @@
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label blog-list__card__label">ギター</div>
-                                <img src="../img/SP/blog/blog01.png"
-                                    srcset="../img/SP/blog/blog01.png 1x, ../img/SP/blog/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/blog/blog01.png"
+                                    srcset="./img/SP/blog/blog01.png 1x, ./img/SP/blog/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img no-pc">
-                                <img src="../img/PC/blog/blog01.png"
-                                    srcset="../img/PC/blog/blog01.png 1x, ../img/PC/blog/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/blog/blog01.png"
+                                    srcset="./img/PC/blog/blog01.png 1x, ./img/PC/blog/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img pc">
                             </div>
                         </div>
@@ -185,11 +185,11 @@
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label blog-list__card__label">集客方法</div>
-                                <img src="../img/SP/blog/blog02.png"
-                                    srcset="../img/SP/blog/blog02.png 1x, ../img/SP/blog/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/blog/blog02.png"
+                                    srcset="./img/SP/blog/blog02.png 1x, ./img/SP/blog/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img no-pc">
-                                <img src="../img/PC/blog/blog02.png"
-                                    srcset="../img/PC/blog/blog02.png 1x, ../img/PC/blog/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/blog/blog02.png"
+                                    srcset="./img/PC/blog/blog02.png 1x, ./img/PC/blog/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img pc">
                             </div>
                         </div>
@@ -209,11 +209,11 @@
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label blog-list__card__label">SNS</div>
-                                <img src="../img/SP/blog/blog03.png"
-                                    srcset="../img/SP/blog/blog03.png 1x, ../img/SP/blog/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/blog/blog03.png"
+                                    srcset="./img/SP/blog/blog03.png 1x, ./img/SP/blog/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img no-pc">
-                                <img src="../img/PC/blog/blog03.png"
-                                    srcset="../img/PC/blog/blog03.png 1x, ../img/PC/blog/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/blog/blog03.png"
+                                    srcset="./img/PC/blog/blog03.png 1x, ./img/PC/blog/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img pc">
                             </div>
                         </div>
@@ -233,11 +233,11 @@
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label blog-list__card__label">ギター</div>
-                                <img src="../img/SP/blog/blog01.png"
-                                    srcset="../img/SP/blog/blog01.png 1x, ../img/SP/blog/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/blog/blog01.png"
+                                    srcset="./img/SP/blog/blog01.png 1x, ./img/SP/blog/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img no-pc">
-                                <img src="../img/PC/blog/blog01.png"
-                                    srcset="../img/PC/blog/blog01.png 1x, ../img/PC/blog/blog01@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/blog/blog01.png"
+                                    srcset="./img/PC/blog/blog01.png 1x, ./img/PC/blog/blog01@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img pc">
                             </div>
                         </div>
@@ -257,11 +257,11 @@
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label blog-list__card__label">集客方法</div>
-                                <img src="../img/SP/blog/blog02.png"
-                                    srcset="../img/SP/blog/blog02.png 1x, ../img/SP/blog/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/blog/blog02.png"
+                                    srcset="./img/SP/blog/blog02.png 1x, ./img/SP/blog/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img no-pc">
-                                <img src="../img/PC/blog/blog02.png"
-                                    srcset="../img/PC/blog/blog02.png 1x, ../img/PC/blog/blog02@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/blog/blog02.png"
+                                    srcset="./img/PC/blog/blog02.png 1x, ./img/PC/blog/blog02@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img pc">
                             </div>
                         </div>
@@ -281,11 +281,11 @@
                         <div class="blog-list__item--left">
                             <div class="c-card__img-container">
                                 <div class="c-card__label blog-list__card__label">SNS</div>
-                                <img src="../img/SP/blog/blog03.png"
-                                    srcset="../img/SP/blog/blog03.png 1x, ../img/SP/blog/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/SP/blog/blog03.png"
+                                    srcset="./img/SP/blog/blog03.png 1x, ./img/SP/blog/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img no-pc">
-                                <img src="../img/PC/blog/blog03.png"
-                                    srcset="../img/PC/blog/blog03.png 1x, ../img/PC/blog/blog03@2x.png 2x" alt="ブログ画像01"
+                                <img src="./img/PC/blog/blog03.png"
+                                    srcset="./img/PC/blog/blog03.png 1x, ./img/PC/blog/blog03@2x.png 2x" alt="ブログ画像01"
                                     class="c-card__img blog-list__card__img pc">
                             </div>
                         </div>
@@ -306,11 +306,11 @@
                     <div class="blog-list__item--left">
                         <div class="c-card__img-container">
                             <div class="c-card__label blog-list__card__label">ギター</div>
-                            <img src="../img/SP/blog/blog01.png"
-                                srcset="../img/SP/blog/blog01.png 1x, ../img/SP/blog/blog01@2x.png 2x" alt="ブログ画像01"
+                            <img src="./img/SP/blog/blog01.png"
+                                srcset="./img/SP/blog/blog01.png 1x, ./img/SP/blog/blog01@2x.png 2x" alt="ブログ画像01"
                                 class="c-card__img blog-list__card__img no-pc">
-                            <img src="../img/PC/blog/blog01.png"
-                                srcset="../img/PC/blog/blog01.png 1x, ../img/PC/blog/blog01@2x.png 2x" alt="ブログ画像01"
+                            <img src="./img/PC/blog/blog01.png"
+                                srcset="./img/PC/blog/blog01.png 1x, ./img/PC/blog/blog01@2x.png 2x" alt="ブログ画像01"
                                 class="c-card__img blog-list__card__img pc">
                         </div>
                     </div>
@@ -362,16 +362,16 @@
                     </li>
                 </ul>
             </nav>
-            <img src="../img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
+            <img src="./img/icon/footer-logo.svg" alt="footer-logo" class="footer__logo">
             <small class="copyright u-font--white">
                 Copyright © 2021 KITAMURA music school Inc. All Rights
             </small>
             <nav class="footer__sns__nav">
                 <ul>
-                    <li><a href="#"><img src="../img/icon/twitter.svg" alt="twitter"></a></li>
-                    <li><a href="#"><img src="../img/icon/facebook.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="../img/icon/youtube.svg" alt="youtube"></a></li>
-                    <li><a href="#"><img src="../img/icon/instagram.svg" alt="instagram"></a></li>
+                    <li><a href="#"><img src="./img/icon/twitter.svg" alt="twitter"></a></li>
+                    <li><a href="#"><img src="./img/icon/facebook.svg" alt="facebook"></a></li>
+                    <li><a href="#"><img src="./img/icon/youtube.svg" alt="youtube"></a></li>
+                    <li><a href="#"><img src="./img/icon/instagram.svg" alt="instagram"></a></li>
                 </ul>
             </nav>
         </div>
